2012-08-07	Allan McRae	<allan@archlinux.org>

	[BZ #14303]
	* sunrpc/rpc_main.c (SVR4_CPP): Remove.
	(SUNOS_CPP): Likewise.
	(find_cpp): Fall back to selecting system cpp when /lib/cpp is
	not found.
	(open_input): Call CPP using execvp.

2012-08-07  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_PROT_GROWSUPDOWN): Remove.
	(__ASSUME_NO_CLONE_DETACHED): Likewise.
	(__ASSUME_GETDENTS32_D_TYPE): Likewise.
	(__ASSUME_WAITID_SYSCALL): Likewise.
	* sysdeps/unix/sysv/linux/dl-execstack.c
	(_dl_make_stack_executable) [PROT_GROWSDOWN || PROT_GROWSUP]: Make
	code unconditional.
	(_dl_make_stack_executable) [!__ASSUME_PROT_GROWSUPDOWN]: Remove
	conditional code.
	* sysdeps/unix/sysv/linux/getdents.c (__GETDENTS)
	[__ASSUME_GETDENTS32_D_TYPE]: Make code unconditional.
	(__GETDENTS) [!__ASSUME_GETDENTS32_D_TYPE]: Remove conditional
	code.
	* sysdeps/unix/sysv/linux/waitid.c [__NR_waitid]: Make code
	unconditional.
	[__ASSUME_WAITID_SYSCALL]: Likewise.
	[!__ASSUME_WAITID_SYSCALL]: Remove conditional code.

2012-08-07  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/closedir.c: Renamed to ...
	* sysdeps/posix/closedir.c: ... here.
	* sysdeps/unix/dirfd.c: Renamed to ...
	* sysdeps/posix/dirfd.c: ... here.
	* sysdeps/unix/dirstream.h: Renamed to ...
	* sysdeps/posix/dirstream.h: ... here.
	* sysdeps/unix/fdopendir.c: Renamed to ...
	* sysdeps/posix/fdopendir.c: ... here.
	* sysdeps/unix/opendir.c: Renamed to ...
	* sysdeps/posix/opendir.c: ... here.
	* sysdeps/unix/readdir.c: Renamed to ...
	* sysdeps/posix/readdir.c: ... here.
	* sysdeps/unix/readdir_r.c: Renamed to ...
	* sysdeps/posix/readdir_r.c: ... here.
	* sysdeps/unix/rewinddir.c: Renamed to ...
	* sysdeps/posix/rewinddir.c: ... here.
	* sysdeps/unix/seekdir.c: Renamed to ...
	* sysdeps/posix/seekdir.c: ... here.
	* sysdeps/unix/telldir.c: Renamed to ...
	* sysdeps/posix/telldir.c: ... here.
	* sysdeps/unix/sysv/linux/opendir.c: Update #include.