@@ -1,4 +1,4 @@
-/* Copyright (C) 2000, 2004, 2010 Free Software Foundation, Inc.
+/* Copyright (C) 2000-2012 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -20,7 +20,7 @@
 #define DIRENT_TYPE struct dirent64
 #define GETDENTS_64BIT_ALIGNED 1
 
-#include <sysdeps/unix/readdir_r.c>
+#include <sysdeps/posix/readdir_r.c>
 
 #undef __READDIR_R
 #undef __GETDENTS
@@ -38,7 +38,7 @@ versioned_symbol (libc, __readdir64_r, readdir64_r, GLIBC_2_2);
 #define __GETDENTS __old_getdents64
 #define DIRENT_TYPE struct __old_dirent64
 
-#include <sysdeps/unix/readdir_r.c>
+#include <sysdeps/posix/readdir_r.c>
 
 compat_symbol (libc, __old_readdir64_r, readdir64_r, GLIBC_2_1);
 #endif
