@@ -2,6 +2,6 @@
 #define __GETDENTS __getdents64
 #define DIRENT_TYPE struct dirent64
 
-#include <sysdeps/unix/readdir_r.c>
+#include <sysdeps/posix/readdir_r.c>
 
 weak_alias (__readdir64_r, readdir64_r)
