@@ -1,3 +1,9 @@
+2012-08-08  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/unix/sysv/linux/readdir64_r.c: Update #include for
+	sysdeps/unix -> sysdeps/posix move.
+	* sysdeps/unix/sysv/linux/i386/readdir64_r.c: Likewise.
+
 2012-08-07	Allan McRae	<allan@archlinux.org>
 
 	[BZ #14303]
